--- a/src/CarpetProject.Domain.Shared/CarpetProject.Domain.Shared.csproj
+++ b/src/CarpetProject.Domain.Shared/CarpetProject.Domain.Shared.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\FileManagement\src\EasyAbp.FileManagement.Domain.Shared\EasyAbp.FileManagement.Domain.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
