--- a/src/CarpetProject.EntityFrameworkCore/CarpetProject.EntityFrameworkCore.csproj
+++ b/src/CarpetProject.EntityFrameworkCore/CarpetProject.EntityFrameworkCore.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.CmsKit.EntityFrameworkCore" Version="8.2.0" />
+    <ProjectReference Include="..\..\..\FileManagement\src\EasyAbp.FileManagement.EntityFrameworkCore\EasyAbp.FileManagement.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\CarpetProject.Domain\CarpetProject.Domain.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="8.2.0" />
