--- a/src/CarpetProject.HttpApi/CarpetProject.HttpApi.csproj
+++ b/src/CarpetProject.HttpApi/CarpetProject.HttpApi.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FileManagement\src\EasyAbp.FileManagement.HttpApi\EasyAbp.FileManagement.HttpApi.csproj" />
     <ProjectReference Include="..\CarpetProject.Application.Contracts\CarpetProject.Application.Contracts.csproj" />
   </ItemGroup>
 
