--- a/src/CarpetProject.Web/CarpetProject.Web.csproj
+++ b/src/CarpetProject.Web/CarpetProject.Web.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FileManagement\host\EasyAbp.FileManagement.HttpApi.Host\EasyAbp.FileManagement.HttpApi.Host.csproj" />
     <ProjectReference Include="..\..\..\FileManagement\src\EasyAbp.FileManagement.Web\EasyAbp.FileManagement.Web.csproj" />
     <ProjectReference Include="..\CarpetProject.Application\CarpetProject.Application.csproj" />
     <ProjectReference Include="..\CarpetProject.HttpApi\CarpetProject.HttpApi.csproj" />
