FileManagement ile ilgili işlemler geri alındı

--- a/src/CarpetProject.Application/CarpetProject.Application.csproj
+++ b/src/CarpetProject.Application/CarpetProject.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -9,7 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\FileManagement\src\EasyAbp.FileManagement.Application\EasyAbp.FileManagement.Application.csproj" />
     <ProjectReference Include="..\CarpetProject.Domain\CarpetProject.Domain.csproj" />
     <ProjectReference Include="..\CarpetProject.Application.Contracts\CarpetProject.Application.Contracts.csproj" />
   </ItemGroup>
