--- a/src/CarpetProject.Application.Contracts/CarpetProject.Application.Contracts.csproj
+++ b/src/CarpetProject.Application.Contracts/CarpetProject.Application.Contracts.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="8.2.0" />
