--- a/src/CarpetProject.Application.Contracts/CarpetProject.Application.Contracts.csproj
+++ b/src/CarpetProject.Application.Contracts/CarpetProject.Application.Contracts.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="8.2.0" />
